# SystemC

./: .editorconfig  .gitignore  .justfile  CMakeLists.txt  README.md  shell.nix
examples/hello/src/: hello.cpp
include/kiwimodel/: full_adder.hpp  full_adder_tb.hpp  kiwimodel.hpp  math.hpp
tb/: CMakeLists.txt
tb/full_adder/: CMakeLists.txt
tb/full_adder/src/: full_adder_example.cpp
tb/full_adder_testbench/: CMakeLists.txt
tb/full_adder_testbench/src/: full_adder_testbench.cpp  full_adder_testbench_example.cpp
